applications/usa/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usa
spec:
  selector:
    app: usa
  ports:
    - name: http
      port: 80
      targetPort: http
